# agbplay

./: .clang-format  .clang_complete  .gitignore  CGBChannel.cpp  CGBChannel.h  CGBPatterns.cpp  CGBPatterns.h  CMakeLists.txt  ColorDef.h  ConsoleGUI.cpp  ConsoleGUI.h  Constants.h  ControlGUI.cpp  ControlGUI.h  CursesWin.cpp  CursesWin.h  Debug.cpp  Debug.h  DisplayContainer.cpp  DisplayContainer.h  Events.cpp  Events.h  FileContainer.h  HotkeybarGUI.cpp  HotkeybarGUI.h  Makefile  MyException.cpp  MyException.h  NoiseLut.cpp  PlayerInterface.cpp  PlayerInterface.h  PlayerModule.cpp  PlayerModule.h  PlaylistGUI.cpp  README.md  ReverbEffect.cpp  ReverbEffect.h  Rom.cpp  Rom.h  RomviewGUI.cpp  (+25 more)
.github/workflows/: windows-build.yml
src/: CGBChannel.cpp  CGBChannel.h  CGBPatterns.cpp  CGBPatterns.h  ColorDef.h  ConfigManager.cpp  ConfigManager.h  ConsoleGUI.cpp  ConsoleGUI.h  Constants.h  CursesWin.cpp  CursesWin.h  Debug.cpp  Debug.h  DisplayContainer.cpp  DisplayContainer.h  FileContainer.cpp  GameConfig.cpp  GameConfig.h  HotkeybarGUI.cpp  HotkeybarGUI.h  LoudnessCalculator.cpp  LoudnessCalculator.h  OS.cpp  OS.h  PlayerContext.cpp  PlayerContext.h  PlayerInterface.cpp  PlayerInterface.h  PlaylistGUI.cpp  PlaylistGUI.h  Resampler.cpp  Resampler.h  ReverbEffect.cpp  ReverbEffect.h  Ringbuffer.cpp  Ringbuffer.h  Rom.cpp  Rom.h  RomviewGUI.cpp  (+33 more)
src/agbplay/: AgbTypes.h  AgbTypes.hpp  CGBChannel.cpp  CGBChannel.h  CGBPatterns.cpp  CGBPatterns.hpp  CMakeLists.txt  Constants.hpp  Debug.cpp  Debug.h  Debug.hpp  FileReader.cpp  FileReader.h  FileReader.hpp  Gsf.cpp  Gsf.h  Gsf.hpp  LoudnessCalculator.cpp  LoudnessCalculator.h  LoudnessCalculator.hpp  LowLatencyRingbuffer.cpp  LowLatencyRingbuffer.h  LowLatencyRingbuffer.hpp  MP2KChn.cpp  MP2KChn.h  MP2KChn.hpp  MP2KChnPCM.cpp  MP2KChnPCM.h  MP2KChnPCM.hpp  MP2KChnPSG.cpp  MP2KChnPSG.h  MP2KChnPSG.hpp  MP2KContext.cpp  MP2KContext.h  MP2KContext.hpp  MP2KPlayer.cpp  MP2KPlayer.h  MP2KPlayer.hpp  MP2KScanner.cpp  MP2KScanner.h  (+49 more)
src/agbplay-cli/: CLIPlaylist.cpp  CLIPlaylist.hpp  CLIProfile.cpp  CLIProfile.hpp  CLIRender.cpp  CLIRender.hpp  CLISonglist.cpp  CLISonglist.hpp  CMakeLists.txt  CommandRender.cpp  CommandRender.hpp  Playlist.cpp  Render.cpp  Render.hpp  Song.cpp  Song.hpp  Songlist.cpp  main.cpp
src/agbplay-common/: PlaybackEngine.cpp
src/agbplay-gui/: AboutWindow.cpp  AboutWindow.h  AboutWindow.hpp  CMakeLists.txt  GlobalPreferencesWindow.cpp  GlobalPreferencesWindow.h  GlobalPreferencesWindow.hpp  KeyboardWidget.cpp  KeyboardWidget.hpp  MainWindow.cpp  MainWindow.h  MainWindow.hpp  ProfileSettingsWindow.cpp  ProfileSettingsWindow.hpp  ProfileSettingsWindow.ui  RominfoWidget.cpp  RominfoWidget.h  RominfoWidget.hpp  SelectProfileDialog.cpp  SelectProfileDialog.h  SelectProfileDialog.hpp  SettingsWindow.cpp  SettingsWindow.hpp  SettingsWindow.ui  SongWidget.cpp  SongWidget.h  SongWidget.hpp  SonglistWidget.cpp  SonglistWidget.h  SonglistWidget.hpp  StatusWidget.cpp  StatusWidget.h  StatusWidget.hpp  TrackWidget.cpp  TrackWidget.h  TrackWidget.hpp  VUBarWidget.cpp  VUBarWidget.h  VUBarWidget.hpp  VUMeterWidget.cpp  (+5 more)
src/agbplay-gui/resources/: resources.qrc  win32-app.rc
src/agbplay-gui/resources/icons/: all.xcf  metronome-base.xcf  speed-double.xcf  speed-halve.xcf
src/agbplay-nc/: CGBChannel.cpp  CGBChannel.h  CMakeLists.txt  ColorDef.hpp  ConfigManager.cpp  ConfigManager.h  ConsoleGUI.cpp  ConsoleGUI.hpp  Constants.h  CursesWin.cpp  CursesWin.hpp  Debug.cpp  HotkeybarGUI.cpp  HotkeybarGUI.hpp  LoudnessCalculator.cpp  MP2KChn.cpp  MP2KChn.h  MP2KContext.cpp  MP2KContext.h  MP2KPlayer.cpp  MP2KPlayer.h  MP2KScanner.cpp  MP2KScanner.h  MP2KTrack.cpp  MP2KTrack.h  PlaybackEngine.cpp  PlaybackEngine.h  PlaybackSongState.h  PlayerContext.cpp  PlayerContext.h  PlaylistGUI.cpp  PlaylistGUI.h  PlaylistGUI.hpp  Profile.cpp  Profile.h  ProfileManager.cpp  ProfileManager.h  Resampler.cpp  Resampler.h  ReverbEffect.cpp  (+34 more)
src/agbplay-util/: CMakeLists.txt  PlaybackEngine.cpp  PlaybackEngine.h  PlaybackEngine.hpp
src/core/: CGBChannel.cpp  CGBChannel.h  ConfigManager.h  Constants.h  Debug.h  GameConfig.cpp  OS.cpp  PlayerContext.cpp  PlayerContext.h  Resampler.cpp  ReverbEffect.cpp  ReverbEffect.h  Rom.cpp  Rom.h  SequenceReader.cpp  SequenceReader.h  SoundChannel.cpp  SoundChannel.h  SoundData.cpp  SoundData.h  SoundMixer.h  Types.h  Util.h
src/gui/: ConsoleGUI.cpp  ConsoleGUI.h  DisplayContainer.h  HotkeybarGUI.h  LoudnessCalculator.cpp  PlayerInterface.cpp  PlaylistGUI.cpp  PlaylistGUI.h  SonglistGUI.cpp  SoundExporter.cpp  SoundExporter.h  TitlebarGUI.h  TrackviewGUI.h  WindowGUI.cpp  agbplay.cpp
src/tests/: CMakeLists.txt  NotchFilter.hpp  README.md  TestResamplerSinc.cpp
vs2013/: .gitignore  agbplay.sln  agbplay.vcxproj  agbplay.vcxproj.filters  packages.config
vs2015/: agbplay.sln  agbplay.vcxproj  agbplay.vcxproj.filters  packages.config
